--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7cd8ec23",
+   "id": "dbfafec9",
    "metadata": {},
    "source": [
     "# Day 1"
@@ -27,7 +27,6 @@
    ],
    "source": [
     "## Day 1: Part 1 - Sliding Window Increases\n",
-    "## Load parse\n",
     "with open('input_day1') as f:\n",
     "    lines = f.readlines()\n",
     "lines = [int(line) for line in lines]\n",
@@ -63,18 +62,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a24c8bf1",
+   "cell_type": "markdown",
+   "id": "4d5eba13",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Day 2"
+   ]
   },
   {
-   "cell_type": "raw",
-   "id": "2b80b7dc",
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f3a8cd25",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019945"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 2: Part 2 - Navigation\n",
+    "with open('input_day2') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines = [line.split(\" \") for line in lines]\n",
+    "instructions = [[line[0], int(line[1])] for line in lines]\n",
+    "horizontal, depth = 0, 0\n",
+    "for [direction, speed] in instructions:\n",
+    "    if direction == \"forward\":\n",
+    "        horizontal += speed\n",
+    "    elif direction == \"up\":\n",
+    "        depth -= speed\n",
+    "    elif direction == \"down\":\n",
+    "        depth += speed\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown direction: {direction}\")\n",
+    "(horizontal * depth)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "03bc7cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1599311480"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 2: Part 2 - Navigation with Aim\n",
+    "with open('input_day2') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines = [line.split(\" \") for line in lines]\n",
+    "instructions = [[line[0], int(line[1])] for line in lines]\n",
+    "horizontal, depth, aim = 0, 0, 0\n",
+    "for [direction, speed] in instructions:\n",
+    "    if direction == \"forward\":\n",
+    "        horizontal += speed\n",
+    "        depth += speed * aim\n",
+    "    elif direction == \"up\":\n",
+    "        aim -= speed\n",
+    "    elif direction == \"down\":\n",
+    "        aim += speed\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown direction: {direction}\")\n",
+    "(horizontal * depth)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "987a5381",
+   "metadata": {},
+   "source": [
+    "# Day 3"
+   ]
   }
  ],
  "metadata": {
