Day 3: Power and Life Support

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -150,6 +150,100 @@
    "source": [
     "# Day 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "65545ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4160394"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 3: Part 1 - Power Rating\n",
+    "with open('input_day3') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines = [line.strip() for line in lines]\n",
+    "frequency = [0] * len(lines[0])\n",
+    "for line in lines:\n",
+    "    for idx, character in enumerate(line):\n",
+    "        if character == \"1\":\n",
+    "            frequency[idx] += 1\n",
+    "gamma = [f // len(lines) for f in frequency]\n",
+    "epsilon = [abs(f -1) for f in gamma]\n",
+    "gamma_int = int(\"\".join((str(g) for g in gamma)), 2)\n",
+    "epislon_int = int(\"\".join((str(e) for e in epsilon)), 2)\n",
+    "gamma_int * epislon_int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "750b1a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1719"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 3: Part 2 - CO2 and Oxygen Rating\n",
+    "with open('input_day3') as f:\n",
+    "    lines = f.readlines()\n",
+    "lines = [line.strip() for line in lines]\n",
+    "line_len = len(lines[0])\n",
+    "\n",
+    "idx = 0\n",
+    "ox_data = lines\n",
+    "while len(ox_data) > 1:\n",
+    "    freq = 0\n",
+    "    for data in ox_data:\n",
+    "        if data[idx] == \"1\":\n",
+    "            freq += 1\n",
+    "    most_frequent = int(freq // (len(ox_data) / 2))\n",
+    "    ox_data = [data for data in ox_data if data[idx] == str(most_frequent)]\n",
+    "    idx += 1\n",
+    "ox_rating = int(ox_data[0], 2)\n",
+    "\n",
+    "idx = 0\n",
+    "co_data = lines\n",
+    "while len(co_data) > 1:\n",
+    "    freq = 0\n",
+    "    for data in co_data:\n",
+    "        if data[idx] == \"1\":\n",
+    "            freq += 1\n",
+    "    least_frequent = abs(int(freq // (len(co_data) / 2)) - 1)\n",
+    "    co_data = [data for data in co_data if data[idx] == str(least_frequent)]\n",
+    "    idx += 1\n",
+    "co_rating = int(co_data[0], 2)\n",
+    "\n",
+    "\n",
+    "ox_rating\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72d85c92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
