Day 3: Guard against edge case in input
I was lazy and messing around with math and forgot that you can
match every single line in the output. This would have made my integer
division of frequency // (len/2) == 2 instead of 1. Added in some
min's to fix this. Probably would replace this with an if statement if
I was working on this for real and not for fun.

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -153,8 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "65545ed9",
+   "execution_count": 52,
+   "id": "d3af0705",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4160394"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
     "    for idx, character in enumerate(line):\n",
     "        if character == \"1\":\n",
     "            frequency[idx] += 1\n",
-    "gamma = [f // len(lines) for f in frequency]\n",
+    "gamma = [min(int(f // (len(lines) / 2)), 1) for f in frequency]\n",
     "epsilon = [abs(f -1) for f in gamma]\n",
     "gamma_int = int(\"\".join((str(g) for g in gamma)), 2)\n",
     "epislon_int = int(\"\".join((str(e) for e in epsilon)), 2)\n",
@@ -187,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "750b1a88",
+   "execution_count": 50,
+   "id": "dec7f92f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1719"
+       "4125600"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
     "    for data in ox_data:\n",
     "        if data[idx] == \"1\":\n",
     "            freq += 1\n",
-    "    most_frequent = int(freq // (len(ox_data) / 2))\n",
+    "    most_frequent = min(int(freq // (len(ox_data) / 2)), 1)\n",
     "    ox_data = [data for data in ox_data if data[idx] == str(most_frequent)]\n",
     "    idx += 1\n",
     "ox_rating = int(ox_data[0], 2)\n",
@@ -228,19 +228,19 @@
     "    for data in co_data:\n",
     "        if data[idx] == \"1\":\n",
     "            freq += 1\n",
-    "    least_frequent = abs(int(freq // (len(co_data) / 2)) - 1)\n",
+    "    least_frequent = abs(min(int(freq // (len(co_data) / 2)), 1) - 1)\n",
     "    co_data = [data for data in co_data if data[idx] == str(least_frequent)]\n",
     "    idx += 1\n",
     "co_rating = int(co_data[0], 2)\n",
     "\n",
     "\n",
-    "ox_rating\n"
+    "ox_rating * co_rating\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d85c92",
+   "id": "fe02b635",
    "metadata": {},
    "outputs": [],
    "source": []
