Day4: Squid Bingo

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -238,9 +238,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba3522ea",
+   "metadata": {},
+   "source": [
+    "# Day 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a7836bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['46', '79', '77', '45', '57', '34', '44', '13', '32', '88', '86', '82', '91', '97', '89', '1', '48', '31', '18', '10', '55', '74', '24', '11', '80', '78', '28']\n",
+      "\n",
+      "['19', '85', '36', '73', '71']\n",
+      "['65', '62', '14', '52', '3']\n",
+      "['30', '83', '44*', '41', '5']\n",
+      "['55*', '15', '0', '61', '95']\n",
+      "['28*', '13*', '32*', '31*', '88*']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22680"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 4: Part1 Squid Bingo\n",
+    "\n",
+    "## Bingo Board Dimension\n",
+    "bingo_dim = 5\n",
+    "## Indicies of diagnoal elements\n",
+    "diag_elements = [[(x,x) for x in range(0, bingo_dim)], [(x, bingo_dim - (x+1)) for x in range(0, bingo_dim)]]\n",
+    "\n",
+    "\n",
+    "with open('input_day4') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "number_draws = [x for x in lines[0].strip().split(\",\")]\n",
+    "number_draws\n",
+    "\n",
+    "boards_string = lines[1::]\n",
+    "\n",
+    "def read_boards(input):\n",
+    "    remaining_input = input\n",
+    "    boards = []\n",
+    "    while(len(remaining_input) != 0):\n",
+    "        board = [row.strip().split() for row in remaining_input[1:1 + bingo_dim]]\n",
+    "        remaining_input = remaining_input[1 + bingo_dim::]\n",
+    "        boards += [board]\n",
+    "    return boards\n",
+    "\n",
+    "def mark(board, draws):\n",
+    "    draws = set(draws)\n",
+    "    return [[square in draws for square in row] for row in board]\n",
+    "    \n",
+    "def board_victory(board, draws):\n",
+    "    marked = mark(board, draws)\n",
+    "    row_victories = [all(row) for row in marked]\n",
+    "    col_victories = [all(col) for col in list(map(list, zip(*marked)))]\n",
+    "    diagonal_victories = [all([marked[diag[0]][diag[1]] for diag in diag_path]) for diag_path in diag_elements] \n",
+    "    return any(row_victories) or any(col_victories) or any(diagonal_victories)\n",
+    "\n",
+    "def sum_unmarked(board, draws):\n",
+    "    draws = set(draws)\n",
+    "    return sum(sum([int(square) for square in row if square not in draws]) for row in board)\n",
+    "\n",
+    "def print_board(board, draws):\n",
+    "    for row in board:\n",
+    "        print ([element + (\"\" if element not in draws else \"*\") for element in row])\n",
+    "\n",
+    "def find_winner(boards, full_draws):\n",
+    "    for draw_idx in range(1, len(full_draws)):\n",
+    "        draws = full_draws[0: draw_idx]\n",
+    "        for board in boards:\n",
+    "            if board_victory(board, draws):\n",
+    "                print(draws)\n",
+    "                print()\n",
+    "                print_board(board, draws)\n",
+    "                return sum_unmarked(board, draws) * int(draws[-1])\n",
+    "        \n",
+    "boards = read_boards(boards_string)\n",
+    "#print(boards[0])\n",
+    "#board_victory(boards[0], {'96', '33', '74', '35', '13'})\n",
+    "find_winner(boards, number_draws)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "76df3a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['46', '79', '77', '45', '57', '34', '44', '13', '32', '88', '86', '82', '91', '97', '89', '1', '48', '31', '18', '10', '55', '74', '24', '11', '80', '78', '28', '37', '47', '17', '21', '61', '26', '85', '99', '96', '23', '70', '3', '54', '5', '41', '50', '63', '14', '64', '42', '36', '95', '52', '76', '68', '29', '9', '98', '35', '84', '83', '71', '49', '73', '58', '56', '66', '92', '30', '51', '20', '81', '69', '65', '15', '6', '16', '39', '43', '67', '7', '59', '40', '60', '4', '90', '72', '22', '0', '93', '94']\n",
+      "\n",
+      "['72*', '49*', '51*', '12', '43*']\n",
+      "['73*', '56*', '83*', '4*', '27']\n",
+      "['48*', '94*', '38', '18*', '32*']\n",
+      "['14*', '96*', '36*', '8', '13*']\n",
+      "['87', '60*', '5*', '77*', '42*']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "16168"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Day 4: Part2 Squid Bingo Loser\n",
+    "def find_loser(init_boards, full_draws):\n",
+    "    boards = init_boards\n",
+    "    for draw_idx in range(1, len(full_draws)):\n",
+    "        draws = full_draws[0: draw_idx]\n",
+    "        if (len(boards) == 1 and board_victory(boards[0], draws)):\n",
+    "            # There is only one board left to check and it won, it is the last winner\n",
+    "            print(draws)\n",
+    "            print()\n",
+    "            print_board(boards[0], draws)\n",
+    "            return sum_unmarked(boards[0], draws) * int(draws[-1])\n",
+    "        else:\n",
+    "            # Remove all winners\n",
+    "            boards = [board for board in boards if not board_victory(board, draws)]\n",
+    "            \n",
+    "find_loser(boards, number_draws)        \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe02b635",
+   "id": "eb2503b8",
    "metadata": {},
    "outputs": [],
    "source": []
