Day 6: Latern Fish Simulation

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3522ea",
+   "id": "41bae6d1",
    "metadata": {},
    "source": [
     "# Day 4"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a7836bcb",
+   "id": "f6becd43",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "76df3a11",
+   "id": "9b7fa61d",
    "metadata": {},
    "outputs": [
     {
@@ -386,9 +386,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64786601",
+   "metadata": {},
+   "source": [
+    "# Day 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "3d4fb617",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5145"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Day 5: Part 1 - No Diags\n",
+    "\n",
+    "with open('input_day5') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "#lines = \"\"\"0,9 -> 5,9\n",
+    "#8,0 -> 0,8\n",
+    "#9,4 -> 3,4\n",
+    "#2,2 -> 2,1\n",
+    "#7,0 -> 7,4\n",
+    "#6,4 -> 2,0\n",
+    "#0,9 -> 2,9\n",
+    "#3,4 -> 1,4\n",
+    "#0,0 -> 8,8\n",
+    "#5,5 -> 8,2\"\"\".split(\"\\n\")\n",
+    "\n",
+    "#dim = 10\n",
+    "dim = 1000\n",
+    "    \n",
+    "coord_str = [(pair[0].split(\",\"), pair[1].split(\",\")) for pair in [line.strip().split(\" -> \") for line in lines]]\n",
+    "coordinates = [((int(org[0]), int(org[1])),(int(dest[0]), int(dest[1]))) for (org, dest) in coord_str]\n",
+    "\n",
+    "chart = [[0] * dim for i in range(dim)]\n",
+    "\n",
+    "def print_chart(chart):\n",
+    "    print(\"--- Chart ---\")\n",
+    "    for row in chart:\n",
+    "        print (\"\".join([str(value if value != 0 else \".\") for value in row]))\n",
+    "        \n",
+    "def normalize(x):\n",
+    "    if (x == 0):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return x // abs(x)\n",
+    "\n",
+    "for ((org_x, org_y), (dest_x, dest_y)) in coordinates:\n",
+    "#    print (f\"{org_x},{org_y} -> {dest_x},{dest_y}\")\n",
+    "    (dx, dy) = (normalize(dest_x - org_x), normalize(dest_y - org_y))\n",
+    "    (delta_x, delta_y) = (0,0)\n",
+    "    if (dx == 0):\n",
+    "        #Draw verticle\n",
+    "        while ((org_x + delta_x, org_y + delta_y) != (dest_x, dest_y)):\n",
+    "            chart[org_y + delta_y][org_x + delta_x] += 1\n",
+    "            delta_x += dx\n",
+    "            delta_y += dy\n",
+    "        chart[dest_y][dest_x] += 1\n",
+    "        \n",
+    "    if (dy == 0):\n",
+    "        #Draw verticle\n",
+    "        while ((org_x + delta_x, org_y + delta_y) != (dest_x, dest_y)):\n",
+    "            chart[org_y + delta_y][org_x + delta_x] += 1\n",
+    "            delta_x += dx\n",
+    "            delta_y += dy\n",
+    "        chart[dest_y][dest_x] += 1\n",
+    "\n",
+    "#print_chart(chart)\n",
+    "\n",
+    "danger_squares = 0\n",
+    "for row in chart:\n",
+    "    for value in row:\n",
+    "        if value > 1:\n",
+    "            danger_squares += 1\n",
+    "\n",
+    "danger_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "e9e482d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16518"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Day 5: Part 2 - Diags\n",
+    "\n",
+    "with open('input_day5') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "#lines = \"\"\"0,9 -> 5,9\n",
+    "#8,0 -> 0,8\n",
+    "#9,4 -> 3,4\n",
+    "#2,2 -> 2,1\n",
+    "#7,0 -> 7,4\n",
+    "#6,4 -> 2,0\n",
+    "#0,9 -> 2,9\n",
+    "#3,4 -> 1,4\n",
+    "#0,0 -> 8,8\n",
+    "#5,5 -> 8,2\"\"\".split(\"\\n\")\n",
+    "\n",
+    "#dim = 10\n",
+    "dim = 1000\n",
+    "    \n",
+    "coord_str = [(pair[0].split(\",\"), pair[1].split(\",\")) for pair in [line.strip().split(\" -> \") for line in lines]]\n",
+    "coordinates = [((int(org[0]), int(org[1])),(int(dest[0]), int(dest[1]))) for (org, dest) in coord_str]\n",
+    "\n",
+    "chart = [[0] * dim for i in range(dim)]\n",
+    "\n",
+    "def print_chart(chart):\n",
+    "    print(\"--- Chart ---\")\n",
+    "    for row in chart:\n",
+    "        print (\"\".join([str(value if value != 0 else \".\") for value in row]))\n",
+    "        \n",
+    "def normalize(x):\n",
+    "    if (x == 0):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return x // abs(x)\n",
+    "\n",
+    "for ((org_x, org_y), (dest_x, dest_y)) in coordinates:\n",
+    "#    print (f\"{org_x},{org_y} -> {dest_x},{dest_y}\")\n",
+    "    (dx, dy) = (normalize(dest_x - org_x), normalize(dest_y - org_y))\n",
+    "    (delta_x, delta_y) = (0,0)\n",
+    "    while ((org_x + delta_x, org_y + delta_y) != (dest_x, dest_y)):\n",
+    "        chart[org_y + delta_y][org_x + delta_x] += 1\n",
+    "        delta_x += dx\n",
+    "        delta_y += dy\n",
+    "    chart[dest_y][dest_x] += 1\n",
+    "\n",
+    "#print_chart(chart)\n",
+    "\n",
+    "danger_squares = 0\n",
+    "for row in chart:\n",
+    "    for value in row:\n",
+    "        if value > 1:\n",
+    "            danger_squares += 1\n",
+    "\n",
+    "danger_squares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14169d9e",
+   "metadata": {},
+   "source": [
+    "# Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eb26eadd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "380758"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Latern fish simulation\n",
+    "def simulate_day(state):\n",
+    "    new_state = []\n",
+    "    for fish in state:\n",
+    "        if fish == 0:\n",
+    "            new_state += [6, 8]\n",
+    "        else:\n",
+    "            new_state += [fish - 1]\n",
+    "    return new_state\n",
+    "\n",
+    "\n",
+    "lines = [\"3,4,3,1,2\"]\n",
+    "fish_state = [int(fish) for fish in lines[0].split(\",\")]\n",
+    "for day in range(0, 18):\n",
+    "     fish_state = simulate_day(fish_state)\n",
+    "\n",
+    "print(len(fish_state))\n",
+    "    \n",
+    "\n",
+    "with open('input_day6') as f:\n",
+    "    lines = f.readlines()\n",
+    "fish_state = [int(fish) for fish in lines[0].split(\",\")]\n",
+    "for day in range(0, 80):\n",
+    "    fish_state = simulate_day(fish_state)\n",
+    "\n",
+    "len(fish_state)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "588d95c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1710623015163\n"
+     ]
+    }
+   ],
+   "source": [
+    "## High Efficency latern fish simulation\n",
+    "def simulate_day(state):\n",
+    "    new_state = [0] * 9\n",
+    "    for idx, num_fish in enumerate(state):\n",
+    "        if (idx == 0):\n",
+    "            new_state[6] += num_fish\n",
+    "            new_state[8] += num_fish\n",
+    "        else:\n",
+    "            new_state[idx -1] += num_fish\n",
+    "    return new_state\n",
+    "\n",
+    "def parse_fish(fish_string):\n",
+    "    state = [0] * 9\n",
+    "    for fish in lines[0].split(\",\"):\n",
+    "        state[int(fish)] += 1\n",
+    "    return state\n",
+    "                \n",
+    "#lines = [\"3,4,3,1,2\"]\n",
+    "#\n",
+    "#fish_state = parse_fish(lines[0])\n",
+    "#for day in range(0, 256):\n",
+    "#    print(fish_state)\n",
+    "#    fish_state = simulate_day(fish_state)\n",
+    "#\n",
+    "#print(sum(fish_state))\n",
+    "    \n",
+    "with open('input_day6') as f:\n",
+    "    lines = f.readlines()\n",
+    "fish_state = parse_fish(lines[0])\n",
+    "for day in range(0, 256):\n",
+    "    fish_state = simulate_day(fish_state)\n",
+    "print(sum(fish_state))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2503b8",
+   "id": "fe6d982d",
    "metadata": {},
    "outputs": [],
    "source": []
