Day 7: Crab Alignment

--- a/Advent 2021.ipynb
+++ b/Advent 2021.ipynb
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "## Latern fish simulation\n",
+    "## Day 6: Part 1 - Latern fish simulation\n",
     "def simulate_day(state):\n",
     "    new_state = []\n",
     "    for fish in state:\n",
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "588d95c7",
+   "id": "9041c019",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
     }
    ],
    "source": [
-    "## High Efficency latern fish simulation\n",
+    "## Day 6: Part 2 - High Efficency latern fish simulation\n",
     "def simulate_day(state):\n",
     "    new_state = [0] * 9\n",
     "    for idx, num_fish in enumerate(state):\n",
@@ -662,9 +662,214 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e23963e",
+   "metadata": {},
+   "source": [
+    "# Day 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ac6303c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "345035"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('input_day7') as f:\n",
+    "    lines = f.readlines()\n",
+    "#positions = [int(x) for x in \"16,1,2,0,4,2,7,1,2,14\".split(\",\")]\n",
+    "positions = [int(x) for x in lines[0].split(\",\")]\n",
+    "sum(positions) / len(positions)\n",
+    "max_pos = max(positions)\n",
+    "min_pos = min(positions)\n",
+    "\n",
+    "def calculate_cost(positions, loc):\n",
+    "    return sum(abs(loc - pos) for pos in positions)\n",
+    "  \n",
+    "min([calculate_cost(positions, loc) for loc in range(min_pos, max_pos + 1)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0d4635cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97038163"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('input_day7') as f:\n",
+    "    lines = f.readlines()\n",
+    "#positions = [int(x) for x in \"16,1,2,0,4,2,7,1,2,14\".split(\",\")]\n",
+    "positions = [int(x) for x in lines[0].split(\",\")]\n",
+    "sum(positions) / len(positions)\n",
+    "max_pos = max(positions)\n",
+    "min_pos = min(positions)\n",
+    "\n",
+    "def calculate_cost(positions, loc):\n",
+    "    return sum(((pow(loc - pos, 2) + abs(loc - pos)) // 2) for pos in positions)\n",
+    "  \n",
+    "min([calculate_cost(positions, loc) for loc in range(min_pos, max_pos + 1)])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6d982d",
+   "id": "b1abb614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try something a little smarter, Cost function has a single global minimum (both cost functions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "242fbf0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stepping down to 483\n",
+      "Stepping down to 241\n",
+      "Stepping up to 362\n",
+      "Stepping down to 301\n",
+      "Stepping up to 331\n",
+      "Stepping up to 346\n",
+      "Stepping up to 354\n",
+      "Stepping down to 350\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "345035"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('input_day7') as f:\n",
+    "    lines = f.readlines()\n",
+    "#positions = [int(x) for x in \"16,1,2,0,4,2,7,1,2,14\".split(\",\")]\n",
+    "positions = [int(x) for x in lines[0].split(\",\")]\n",
+    "sum(positions) / len(positions)\n",
+    "max_pos = max(positions)\n",
+    "min_pos = min(positions)\n",
+    "\n",
+    "def calculate_cost(positions, loc):\n",
+    "    return sum(abs(loc - pos) for pos in positions)\n",
+    "\n",
+    "def find_lowest(positions, loc, lower, upper):\n",
+    "    if (upper - lower == 2):\n",
+    "        return loc\n",
+    "    base = calculate_cost(positions, loc)\n",
+    "    if (loc - 1 >= lower and calculate_cost(positions, loc - 1) < base):\n",
+    "        print (f\"Stepping down to {(loc + lower) // 2}\")\n",
+    "        return find_lowest(positions, (loc + lower) // 2, lower, loc)\n",
+    "    elif (loc + 1 <= max_pos and calculate_cost(positions, loc + 1) < base):\n",
+    "        print (f\"Stepping up to {(loc + upper) // 2}\")\n",
+    "        return find_lowest(positions, (loc + upper) // 2, loc, upper)\n",
+    "    else:\n",
+    "        return loc  \n",
+    "    \n",
+    "lowest_pos = find_lowest(positions, (max_pos + min_pos) // 2, min_pos - 1, max_pos + 1)\n",
+    "calculate_cost(positions, lowest_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2f8a0312",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stepping down to 483\n",
+      "Stepping down to 241\n",
+      "Stepping up to 362\n",
+      "Stepping up to 422\n",
+      "Stepping up to 452\n",
+      "Stepping up to 467\n",
+      "Stepping up to 475\n",
+      "Stepping up to 479\n",
+      "Stepping down to 477\n",
+      "Stepping up to 478\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "97038163"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('input_day7') as f:\n",
+    "    lines = f.readlines()\n",
+    "#positions = [int(x) for x in \"16,1,2,0,4,2,7,1,2,14\".split(\",\")]\n",
+    "positions = [int(x) for x in lines[0].split(\",\")]\n",
+    "sum(positions) / len(positions)\n",
+    "max_pos = max(positions)\n",
+    "min_pos = min(positions)\n",
+    "\n",
+    "def calculate_cost(positions, loc):\n",
+    "    return sum(((pow(loc - pos, 2) + abs(loc - pos)) // 2) for pos in positions)\n",
+    "  \n",
+    "\n",
+    "def find_lowest(positions, loc, lower, upper):\n",
+    "    if (upper - lower == 2):\n",
+    "        return loc\n",
+    "    base = calculate_cost(positions, loc)\n",
+    "    if (loc - 1 >= lower and calculate_cost(positions, loc - 1) < base):\n",
+    "        print (f\"Stepping down to {(loc + lower) // 2}\")\n",
+    "        return find_lowest(positions, (loc + lower) // 2, lower, loc)\n",
+    "    elif (loc + 1 <= max_pos and calculate_cost(positions, loc + 1) < base):\n",
+    "        print (f\"Stepping up to {(loc + upper) // 2}\")\n",
+    "        return find_lowest(positions, (loc + upper) // 2, loc, upper)\n",
+    "    else:\n",
+    "        return loc  \n",
+    "    \n",
+    "lowest_pos = find_lowest(positions, (max_pos + min_pos) // 2, min_pos - 1, max_pos + 1)\n",
+    "calculate_cost(positions, lowest_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f3483a",
    "metadata": {},
    "outputs": [],
    "source": []
